# Factania

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: docker-image.yml
assets/: BG.grit  FactaniaSpriteSheet.aseprite  cursor.grit  grassland_tiles.grit  player_sprite.grit  tiny_16.grit
notes/: meeting_1.md
scripts/: Dockerfile  build-toolchained.sh  build.bat  build.sh  create-environment.bat  create-environment.sh  generate_visual_studio.bat  setup.bat
scripts/cmake/: git.cmake  grit.cmake
scripts/melonds/: dldi.bin.idx
src/: Camera.cpp  Camera.h  Console.cpp  Console.h  Conveyer.cpp  Conveyer.h  Engine.cpp  Engine.h  EntitySystemManager.cpp  EntitySystemManager.h  FactaniaMain.cpp  FactaniaMain.h  Inventory.h  InventoryDebugSystem.cpp  InventoryDebugSystem.h  Item.h  Math.cpp  Math.h  Player.cpp  Player.h  Rand.cpp  Rand.h  RenderSystem.cpp  RenderSystem.h  Save.cpp  Save.h  Sprite.h  System.h  Transform.cpp  Transform.h  batcher.c  building.cpp  building.h  chunk.c  chunk.cpp  chunk.hpp  engine.cpp  engine.h  entity.cpp  entity.h  (+20 more)
src/debug_menu/: DebugLog.cpp  DebugLog.h  build_details_menu.cpp  build_details_menu.h  debug_menu.cpp  debug_menu.h  memory_debug_info.cpp  memory_debug_info.h  save_debug_menu.cpp  save_debug_menu.h  stacktrace_debug_menu.cpp  stacktrace_debug_menu.h
src/multiplayer/: MultiplayerTest.cpp  MultiplayerTest.h
